force-app/main/default/objects/Banner_Buddy__c/Banner_Buddy__c.object-meta.xml
<CustomObject>
    <label>Banner Buddy</label>
    <nameField>
        <label>Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banner Buddy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>