force-app/main/default/objects/Banner_Buddy__c/fields/Banner_Description__c.field-meta.xml
<CustomField>
    <fullName>Banner_Description__c</fullName>
    <label>Banner Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>