force-app/main/default/objects/Banner_Buddy__c/fields/Banner_Message__c.field-meta.xml
<CustomField>
    <fullName>Banner_Message__c</fullName>
    <label>Banner Message</label>
    <type>Html</type>
    <length>1500</length>
</CustomField>