force-app/main/default/objects/Banner_Buddy__c/fields/Banner_Title__c.field-meta.xml
<CustomField>
    <fullName>Banner_Title__c</fullName>
    <label>Banner Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>