force-app/main/default/objects/Banner_Buddy__c/fields/Links_To__c.field-meta.xml
<CustomField>
    <fullName>Links_To__c</fullName>
    <label>Links To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>