force-app/main/default/objects/Banner_Buddy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Start_Date__c &gt; TODAY(), "Scheduled",
    IF(AND(TODAY() &gt;= Start_Date__c, TODAY() &lt;= End_Date__c), "Active",
    IF(End_Date__c &lt; TODAY(), "Expired", "")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>